syntax = "proto3";

package v2ray.core.app.observatory.command;
option csharp_namespace = "V2Ray.Core.App.Observatory.Command";
option go_package = "github.com/ghxhy/v2ray-core/v5/app/observatory/command";
option java_package = "com.v2ray.core.app.observatory.command";
option java_multiple_files = true;

import "common/protoext/extensions.proto";
import "app/observatory/config.proto";

message GetOutboundStatusRequest {
  string Tag = 1;
}

message GetOutboundStatusResponse {
  v2ray.core.app.observatory.ObservationResult status = 1;
}

service ObservatoryService {
  rpc GetOutboundStatus(GetOutboundStatusRequest)
      returns (GetOutboundStatusResponse) {}
}


message Config {
  option (v2ray.core.common.protoext.message_opt).type = "grpcservice";
  option (v2ray.core.common.protoext.message_opt).short_name = "observatory";
}